--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>xyz.acrylicstyle</groupId>
     <artifactId>AntiCheatAPI</artifactId>
-    <version>0.0.7</version>
+    <version>0.0.8</version>
     <build>
         <plugins>
             <plugin>
@@ -58,6 +58,10 @@
             <id>acrylic-repo</id>
             <url>https://repo.acrylicstyle.xyz/</url>
         </repository>
+        <repository>
+            <id>acrylic-repo2</id>
+            <url>https://repo2.acrylicstyle.xyz/</url>
+        </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -75,7 +79,7 @@
         <dependency>
             <groupId>xyz.acrylicstyle</groupId>
             <artifactId>api</artifactId>
-            <version>0.4.8</version>
+            <version>0.7.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
